@@ -12,7 +12,8 @@ def test_basics():
 
 def test_stringer():
     "Make sure the basics of the importer work"
-    _ast = import_buffer_to_ast("(defn square [x] (* x x))", '')
+    _ast = import_buffer_to_ast(
+        "(defn square [x] (print \"hello\") (* x x))", '')
     assert type(_ast.body[0]) == ast.FunctionDef
 
 
